--- a/spring-1/lesson-5/src/main/resources/templates/products.html
+++ b/spring-1/lesson-5/src/main/resources/templates/products.html
@@ -12,7 +12,7 @@
     <h1>Каталог товаров</h1>
 
     <h3>Фильтры</h3>
-    <form method="get" th:action="@{/products}">
+    <form method="get" th:action="@{'/products?pageNum=1' + ${productCategoryFilter}}">
         <div class="form-group col-md-6">
             <label for="minPriceInput">Минимальная цена</label>
             <input class="form-control" th:value="${param.minPrice != null ? param.minPrice : null}" name="minPrice" type="number" id="minPriceInput">
@@ -26,9 +26,21 @@
             <input class="form-control" th:value="${param.title != null ? param.title : null}" name="title" type="text" id="titleInput">
         </div>
         <button class="btn btn-primary" type="submit">Применить</button>
-        <a class="btn btn-primary" th:href="@{/products}">Очистить фильтр</a>
+        <a class="btn btn-primary" th:href="@{'/products?pageNum=1' + ${productCategoryFilter}}">Очистить фильтр</a>
     </form>
     <br>
+
+    <ul class="list-group list-group-horizontal">
+        <li class="list-group-item"
+            th:each="c : ${categories}">
+            <a th:text="${c.title}" th:href="@{'/products?category=' + ${c.id} + ${productFilter}}"></a>
+        </li>
+        <li class="list-group-item">
+            <a th:href="@{'/products?pageNum=1' + ${productFilter}}">Все</a>
+        </li>
+    </ul>
+    <br>
+
     <table class="table">
         <thead>
         <tr>
@@ -56,17 +68,18 @@
         <ul class="pagination">
             <li class="page-item" th:classappend="${products.isFirst() ? 'disabled' : ''}">
                 <a class="page-link"
-                   th:href="@{'/products?pageNum=' + ${products.previousOrFirstPageable().getPageNumber() + 1} + ${productFilter}}">Назад</a>
+                   th:href="@{'/products?pageNum=' + ${products.previousOrFirstPageable().getPageNumber() + 1} + ${productFilter} + ${productCategoryFilter}}">Назад</a>
             </li>
 
             <li class="page-item" th:classappend="${products.getNumber() + 1 == i ? 'active' : ''}"
-                th:each="i : ${#numbers.sequence(1, products.getTotalPages())}">
-                <a class="page-link" th:text="${i}" th:href="@{'/products?pageNum=' + ${i} + ${productFilter}}"></a>
+                th:each="i : ${#numbers.sequence((products.getNumber() + 1) <= 2 ? 1 : (products.getNumber() + 1) - 2,
+                (products.getNumber() + 1) >= products.getTotalPages() - 2 ? products.getTotalPages() : (products.getNumber() + 1) + 2)}">
+                <a class="page-link" th:text="${i}" th:href="@{'/products?pageNum=' + ${i} + ${productFilter} + ${productCategoryFilter}}"></a>
             </li>
 
             <li class="page-item"  th:classappend="${products.isLast() ? 'disabled' : ''}">
                 <a class="page-link"
-                   th:href="@{'/products?pageNum='+ ${products.nextOrLastPageable().getPageNumber() + 1} + ${productFilter}}">Вперед</a>
+                   th:href="@{'/products?pageNum='+ ${products.nextOrLastPageable().getPageNumber() + 1} + ${productFilter} + ${productCategoryFilter}}">Вперед</a>
             </li>
         </ul>
     </nav>
